--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "env": {
-    "es6": true,
+    "node": true,
+    "es2021": true,
     "browser": true
   },
   "extends": "airbnb-base",
@@ -15,8 +16,8 @@
     }
   ],
   "parserOptions": {
-    "ecmaVersion": 2019,
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaVersion": "latest"
   },
   "rules" : {
     "max-len": ["error", {
