chore: setup database support and initial models

--- a/.eslintrc
+++ b/.eslintrc
@@ -52,5 +52,7 @@
     "import/no-mutable-exports": 0,
     "import/no-extraneous-dependencies": 0,
     "import/prefer-default-export": 0,
+    "import/no-named-as-default": 0,
+    "import/no-named-as-default-member" : 0
   }
 }
