--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -18,24 +18,24 @@ http {
     gzip_vary on;
     gzip_disable "MSIE [1-6]\.(?!.*SV1)";
 
-    location /favicon.ico {
-      log_not_found off;
-    }
-
     location / {
       root /app/build;
-      expires -1;
-      try_files $uri $uri/ @nodeproxy;
+      index index.html;
+      try_files $uri $uri.html $uri/index.html $uri/ @nodejs;
     }
 
-    location @nodeproxy {
-      proxy_set_header X-Real-IP $remote_addr;
+    location @nodejs {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header Host $http_host;
-      proxy_set_header X-Nginx-Proxy true;
+
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
 
       proxy_pass http://localhost:3001;
       proxy_redirect off;
+      proxy_read_timeout 240s;
     }
   }
 }
