--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "dist": "npm run build -- -fq",
     "test": "node test",
     "pretest": "npm run check",
-    "watch": "nodemon -w api -w app -w tests -x npm test",
+    "predist": "npm run schema",
+    "watch": "NODE_DEV_PRELOAD=@grown/bud node-dev",
+    "watch:test": "npm run watch -- --respawn test",
     "check": "eslint 'api/**/*.js' 'app/**/*.{js,pug,svelte}'",
-    "build": "mortero app -dcpublic:. -P/api:3001 -Eecss.less -I.gitignore --platform browser"
+    "build": "mortero app -dcpublic:. -P/:3001 -Eecss.less -I.gitignore --platform browser",
+    "schema": "json-schema-to -btw api/database -qpc index --esm --json"
   },
   "mortero": {
     "bundle": "app/*.js",
@@ -42,26 +45,31 @@
     "@japa/expect": "^2.0.1",
     "@japa/runner": "^2.2.2",
     "@japa/spec-reporter": "^1.3.2",
-    "eslint": "^8.30.0",
+    "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-pug": "^1.2.3",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-svelte3": "^3.2.0",
+    "json-schema-to": "^0.0.34",
     "less": "^4.1.1",
     "less-plugin-autoprefix": "^2.0.0",
     "live-server": "^1.2.2",
     "mortero": "^0.0.92",
+    "node-dev": "^7.4.3",
     "pug": "^3.0.2",
+    "sqlite3": "^5.1.4",
     "svelte": "^3.49.0",
     "svelte-confetti": "^1.2.0",
     "testdouble": "^3.16.6"
   },
   "dependencies": {
     "@grown/conn": "^0.0.42",
-    "@grown/model": "^0.0.54",
-    "@grown/router": "^0.0.19",
+    "@grown/model": "^0.0.56",
+    "@grown/router": "^0.0.20",
     "@grown/session": "^0.0.27",
-    "grown": "^1.4.4",
+    "grown": "^1.4.6",
+    "pg": "^8.8.0",
+    "therror": "^4.1.1",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.15.0"
   }
 }
