chore: setup database support and initial models

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "node test",
     "pretest": "npm run check",
     "predist": "npm run schema",
-    "watch": "NODE_DEV_PRELOAD=@grown/bud node-dev",
+    "watch": "node-dev",
     "watch:test": "npm run watch -- --respawn test",
     "check": "eslint 'api/**/*.js' 'app/**/*.{js,pug,svelte}'",
     "build": "mortero app -dcpublic:. -P/:3001 -Eecss.less -I.gitignore --platform browser",
@@ -54,8 +54,8 @@
     "less": "^4.1.1",
     "less-plugin-autoprefix": "^2.0.0",
     "live-server": "^1.2.2",
-    "mortero": "^0.0.92",
-    "node-dev": "^7.4.3",
+    "mortero": "^0.0.94",
+    "node-dev": "^8.0.0",
     "pug": "^3.0.2",
     "sqlite3": "^5.1.4",
     "svelte": "^3.49.0",
