--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "dist": "npm run build -- -fq",
     "test": "node test",
     "pretest": "npm run check",
-    "predist": "npm run schema",
     "watch": "node-dev",
     "watch:test": "npm run watch -- --respawn test",
     "check": "eslint 'api/**/*.js' 'app/**/*.{js,pug,svelte}'",
-    "build": "mortero app -dcpublic:. -P/:3001 -Eecss.less -I.gitignore --platform browser",
-    "schema": "json-schema-to -btw api/database -qpc index --esm --json"
+    "build": "mortero app -dcpublic:. -P/:3001 -Eecss.less -I.gitignore --platform browser"
   },
   "mortero": {
     "bundle": "app/*.js",
@@ -45,12 +43,12 @@
     "@japa/expect": "^2.0.1",
     "@japa/runner": "^2.2.2",
     "@japa/spec-reporter": "^1.3.2",
+    "drizzle-kit": "^0.19.13",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-pug": "^1.2.3",
     "eslint-plugin-svelte3": "^3.2.0",
-    "json-schema-to": "^0.0.34",
     "less": "^4.1.1",
     "less-plugin-autoprefix": "^2.0.0",
     "live-server": "^1.2.2",
@@ -63,12 +61,12 @@
     "testdouble": "^3.16.6"
   },
   "dependencies": {
-    "@grown/conn": "^0.0.42",
-    "@grown/model": "^0.0.56",
-    "@grown/router": "^0.0.20",
-    "@grown/session": "^0.0.27",
-    "grown": "^1.4.6",
-    "pg": "^8.8.0",
+    "@grown/conn": "^0.0.44",
+    "@grown/router": "^0.0.21",
+    "@grown/session": "^0.0.28",
+    "@libsql/client": "^0.3.4",
+    "drizzle-orm": "^0.28.6",
+    "grown": "^1.4.23",
     "therror": "^4.1.1",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.15.0"
   }
